<?xml version="1.0" encoding="utf-8"?>
<resources>

  <string name="app_name">Time Domain Reflectometer</string>

  <string name="error_buffer">
    Error from audio recording! Cannot find a working input sample
    rate.
  </string>
  <string name="error_init">
    Audio recorder not initialised! Maybe a working input sample rate
    could not be found.
  </string>

  <string name="version">Time Domain Reflectometer version ~s\nBuilt
  ~s\nCopyright \u00A9 2019 <a
  href="https://billthefarmer.github.io">Bill Farmer</a>\nLicence <a
  href="https://www.gnu.org/licenses/gpl.txt">GNU GPLv3</a></string>

  <string name="about">About</string>
  <string name="range">Range</string>
  <string name="screen">Screen</string>
  <string name="dark">Dark theme</string>
  <string name="left">Left</string>
  <string name="right">Right</string>
  <string name="start">Start</string>
  <string name="end">End</string>

  <string name="r10m">10m</string>
  <string name="r20m">20m</string>
  <string name="r50m">50m</string>
  <string name="r100m">100m</string>
  <string name="r200m">200m</string>
  <string name="r500m">500m</string>
  <string name="r1000m">1000m</string>

</resources>
