<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">

  <item
      android:id="@+id/range"
      android:icon="@drawable/ic_action_import_export"
      android:showAsAction="always"
      android:title="@string/range">

    <menu>
      <group android:checkableBehavior="single">

        <item
            android:id="@+id/r10m"
            android:title="@string/r10m" />

        <item
            android:id="@+id/r20m"
            android:title="@string/r20m" />

        <item
            android:id="@+id/r50m"
            android:title="@string/r50m" />

        <item
            android:id="@+id/r100m"
            android:checked="true"
            android:title="@string/r100m" />

        <item
            android:id="@+id/r200m"
            android:title="@string/r200m" />

        <item
            android:id="@+id/r500m"
            android:title="@string/r500m" />

        <item
            android:id="@+id/r1000m"
            android:title="@string/r1000m" />

      </group>
    </menu>
  </item>

  <item
      android:id="@+id/left"
      android:icon="@drawable/ic_action_previous_item"
      android:showAsAction="always"
      android:title="@string/left" />

  <item
      android:id="@+id/right"
      android:icon="@drawable/ic_action_next_item"
      android:showAsAction="always"
      android:title="@string/right" />

  <item
      android:id="@+id/start"
      android:icon="@drawable/ic_action_back"
      android:showAsAction="ifRoom"
      android:title="@string/start" />

  <item
      android:id="@+id/end"
      android:icon="@drawable/ic_action_forward"
      android:showAsAction="ifRoom"
      android:title="@string/end" />

  <item
      android:id="@+id/dark"
      android:icon="@drawable/ic_action_brightness_high"
      android:showAsAction="ifRoom"
      android:title="@string/dark" />

  <item
      android:id="@+id/about"
      android:icon="@drawable/ic_action_about"
      android:showAsAction="ifRoom"
      android:title="@string/about" />

</menu>
